<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.asus.embedded.champp.SettingsChampActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cup_settings_layout"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/cup_settings_tv"
            android:layout_gravity="left" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/cup_set_penalities"
                android:text="@string/cup_penalities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <RadioButton
                android:id="@+id/cup_set_home_win"
                android:text="@string/cup_home_win"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/league_settings_layout"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/league_settings_tv"
        android:layout_gravity="left" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_group_competition">

        <RadioButton
            android:id="@+id/radio_champ_turn"
            android:text="@string/champ_round_robin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>

        <RadioButton

            android:id="@+id/radio_champ_return"
            android:text="@string/champ_double_round_robin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RadioGroup>


</LinearLayout>
    <Button
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ReturnMyChamp"
        style="@style/btn_white_small"
        android:layout_marginTop="10dp" />

</LinearLayout>
