<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcome_tv"
        android:text="@string/welcome"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/txt_18sp"
        style="@style/txt_green"/>

    <Button
        style="@style/btn_white_large"
        android:id="@+id/new_champ_bt"
        android:text="@string/new_champ"
        android:layout_gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/pad_10dp"
        android:onClick="newChamp"
       />

    <ListView

        android:id="@+id/champ_list_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:divider="@color/green"
        android:dividerHeight="1dp"/>

</LinearLayout>
