...
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/green"
    tools:context="com.asus.embedded.champp.ModalActivity">

    <TextView
        android:text="@string/select_modal_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/select_modal_tv" />

    <GridLayout
...
            android:layout_column="0"
            android:layout_gravity="center" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/football_ib"
            android:src="@mipmap/green_football"
            android:background="@color/green"
            android:layout_row="0"
            android:layout_column="1"
            android:onClick="select"
            android:layout_marginLeft="50dp" />
...
